--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,8 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero__text">
-                                <span>Boost jims
-                                 your Audience</span>
-                                <h2>Digital Broadcasting & Promotion </h2>
+                                <span>Boost your Audience</span>
+                                <h2>Digital Broadcasting & Promotionllllllllllllllll </h2>
                                 <a href="#" class="primary-btn">See more about us</a>
                             </div>
                         </div>
