--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="hero__text">
-                                <span>Boost your Audience</span>
+                                <span>Boost your Audience lll</span>
                                 <h2>Digital Broadcasting & Promotion </h2>
                                 <a href="#" class="primary-btn">See more about us</a>
                             </div>
