ADDED ECOMMERCE PAGE FOR SERVICE SELL OUTS.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,9 +28,6 @@
 
 <body>
     <!-- Page Preloder -->
-    <div id="preloder">
-        <div class="loader"></div>
-    </div>
 
     <!-- Header Section Begin -->
     <header class="header">
@@ -47,13 +44,15 @@
                             <ul>
                                 <li id="home" class="active"><a href="/">Home</a></li>
                                 <li id="about" class=""><a href="about">About</a></li>
-                                <li id="portfolio" class=""><a aria-disabled="true">Portfolio</a></li>
+                                <li id="portfolio" class=""><a href="service_shop">shop</a></li>
                                 <li id="services" class=""><a aria-disabled="true">Services</a></li>
                                 <li id="contact" class=""><a href="contact">Contact</a></li>
                                 <li><a href="#">Extra</a>
                                     <li id="blog" class=""><a href="blog">Blog</a></li>
                                     </ul>
                                 </li>
+                                <li><a href="#" class="user-cart">Cart (0)</a></li>
+
                               
                             </ul>
                         </nav>
