--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,19 @@
                     </div>
                 </div>
             </div>
+            <div class="hero__item set-bg" data-setbg="img/hero/hero-x-03.jpg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="hero__text">
+                                <span>explore</span>
+                                <h2>Artificial intelligence Integration for buisness</h2>
+                                <a href="#" class="primary-btn">See more about us</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="hero__item set-bg" data-setbg="img/hero/hero-x-02.jpg">
                 <div class="container">
                     <div class="row">
